# TrainMindAi

./: .gitignore  README.md
ai-service/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  pyproject.toml
ai-service/alembic/: env.py
ai-service/alembic/versions/: 0001_init.py  0002_kb_eval_and_log_tables.py  0003_chunk_embedding_unique_constraint.py
ai-service/app/: __init__.py  main.py
ai-service/app/core/: config.py  db.py  errors.py  logging.py  redis.py  security.py
ai-service/app/gateway/: embedding_client.py  llm_client.py
ai-service/app/models/: __init__.py  base.py  config_tables.py  document_task.py  eval.py  kb.py  logs.py
ai-service/app/repositories/: __init__.py  base.py  config_repo.py  doc_repo.py  document_task_repo.py  embedding_repo.py  eval_repo.py  log_repo.py  task_repo.py
ai-service/app/schemas/: common.py  qa.py
ai-service/app/services/: __init__.py
ai-service/app/services/chunking/: __init__.py
ai-service/app/services/embedding/: __init__.py
ai-service/app/services/eval/: __init__.py
ai-service/app/services/generation/: __init__.py
ai-service/app/services/parsing/: __init__.py  dispatcher.py  docx_parser.py  file_downloader.py  pdf_parser.py  pptx_parser.py  (+2 more)
ai-service/app/vectorstore/: __init__.py  base.py  pgvector_store.py
ai-service/app/workers/: handlers.py  pipeline.py  worker.py
ai-service/tests/: conftest.py  test_documents_api.py  test_file_downloader.py  test_health.py  test_parsers.py  test_qa.py  test_repositories.py  test_retrieval.py  test_vectorstore.py  test_worker_handlers.py
(+465 files in other folders)
