[project]
name = "trainmind-ai-service"
version = "0.1.0"
description = "TrainMindAi 企业级知识助教系统 - Python AI 服务（解析/RAG/出题/评估）"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3",
    "redis>=5.2",
    "httpx>=0.28",
    "openai>=1.55",
    "openpyxl>=3",
    "python-multipart>=0.0.12",
    "pypdf>=5",
    "python-docx>=1",
    "python-pptx>=1",
    "jieba>=0.42",
    "structlog>=24.4",
    "boto3>=1.34",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
